charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogql
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blogql
                port:
                  number: 80
